# gpt-book

./: .env.template  .gitignore  README.md  pyproject.toml
gpt_book/: main.py
gpt_book/agents/: book_writer.py
gpt_book/helpers/: chat_gpt.py  parsers.py
gpt_book/models/: billings.py  text_comparison.py
tests/: test_parsers.py
views/: view.html  view_book.html
