[tool.poetry]
name = "gpt-book"
version = "0.1.0"
description = ""
authors = ["Sławomir Paszko <slawomir.paszko@aiut.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
loadenv = "^0.1.1"
tqdm = "^4.66.2"
gradio = "^4.19.1"
langchain = "^0.1.7"
langchain-openai = "^0.0.6"
pytest = "^8.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
